web/book/tests/snapshots/snapshot__internals__functional-lang__pipeline__0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nfilter age > 50\nsort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

