web/book/tests/snapshots/snapshot__internals__functional-lang__pipeline__1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees | filter age > 50 | sort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name NULLS LAST

