web/book/tests/snapshots/snapshot__internals__functional-lang__pipeline__2.snap
---
source: web/book/tests/snapshot.rs
expression: "filter age > 50 (from employees) | sort name\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

